dark mode fixes!

--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,7 @@
 html,
 body,
 #root {
-  min-height: 100%;
+  height: 100%;
 }
 
 .font-mono {
